Update index.html (Change color)

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
-            background-color: #f1f1f1;
+            background-color: #b37d79;
             text-align: center;
         }
 
     </style>
 </head>
 <body>
-    <h1>Blue Green Test</h1>
+    <h1>Green Environment is now Live!!!</h1>
     <p>This is a test page for the blue green deployment strategy.</p>
     <p>The page will be served from the blue environment.</p>
 </body>
