--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blue Green Test</title>
     <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #b37d79;
-            text-align: center;
-        }
-
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #84b4ac;
+        text-align: center;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Green Environment is now Live!!!</h1>
     <p>This is a test page for the blue green deployment strategy.</p>
-    <p>The page will be served from the blue environment.</p>
-</body>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat culpa
+      illum impedit animi delectus laboriosam, libero, perspiciatis mollitia
+      beatae reiciendis quo expedita ea, cumque blanditiis dicta voluptatibus
+      eligendi praesentium dolores.
+    </p>
+  </body>
 </html>
