--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
-        background-color: #84b4ac;
+        background-color: #55b4da;
         text-align: center;
       }
     </style>
   </head>
   <body>
-    <h1>Green Environment is now Live!!!</h1>
-    <p>This is a test page for the blue green deployment strategy.</p>
+    <h1>Green Environment is Live and is been served to Users!!!</h1>
+    <p>This is a test page for the green deployment and users.</p>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat culpa
       illum impedit animi delectus laboriosam, libero, perspiciatis mollitia
