Update index.html #3

--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
     <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
-        background-color: #55b4da;
+        background-color: #60da55;
         text-align: center;
       }
     </style>
   </head>
   <body>
-    <h1>Green Environment is Live and is been served to Users!!!</h1>
+    <h1>Updating the green env from pipeline!!!</h1>
     <p>This is a test page for the green deployment and users.</p>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat culpa
       illum impedit animi delectus laboriosam, libero, perspiciatis mollitia
-      beatae reiciendis quo expedita ea, cumque blanditiis dicta voluptatibus
-      eligendi praesentium dolores.
     </p>
   </body>
 </html>
