--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
-        background-color: #60da55;
+        background-color: #0390fc;
         text-align: center;
       }
     </style>
   </head>
   <body>
-    <h1>Updating the green env from pipeline!!!</h1>
+    <h1>Normal Thing to do is Updating the green env from pipeline!!!</h1>
     <p>This is a test page for the green deployment and users.</p>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat culpa
